Fix search field styling on mobile Safari
16px font size prevents zooming when focused.

https://stackoverflow.com/a/6394497/1247274

--- a/src/components/search.module.css
+++ b/src/components/search.module.css
@@ -63,10 +63,12 @@
   width: 100%;
   height: var(--field-height);
   line-height: var(--field-height);
+  padding: 0;
   padding-left: var(--field-height);
   border: 0;
   background: var(--field-bg-color);
   border-radius: var(--field-height);
+  font-size: 16px;
   &::placeholder {
     opacity: 0;
     transition: opacity var(--search-transition-duration);
